# TorchSlam

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  change_hist  pyproject.toml  setup.py  tox.ini
datasets/: base_dataset.py  kitti_dataset.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pytorch_slam/: __init__.py
pytorch_slam/backend/: loop_correction.py
pytorch_slam/backend/optimization/: base.py  bundle_adjustment.py
pytorch_slam/frontend/: loop_detection.py
pytorch_slam/frontend/feature_extraction/: __init__.py  base.py  feature_matcher.py  orb.py  sift.py
pytorch_slam/frontend/odometry/: icp.py  pnp.py
pytorch_slam/frontend/tracking/: __init__.py  base.py
pytorch_slam/state_estimation/: base.py  ekf.py  particle_filter.py
tests/frontend/feature_extraction/: test_orb.py
tests/slam/: test_visual_slam.py
torchslam/: __init__.py
torchslam/backend/: se3.py
torchslam/backend/optimization/: __init__.py  bundle_adjustment.py
torchslam/frontend/: __init__.py  keyframe.py  loop_detection.py
torchslam/frontend/feature_extraction/: __init__.py  base.py  feature_matcher.py  orb.py  sift.py
torchslam/frontend/odometry/: __init__.py  base.py  pnp.py
torchslam/frontend/tracking/: base.py  klt.py
torchslam/slam/: visual_slam.py
torchslam/state_estimation/: particle_filter.py
