[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchslam"
version = "0.1.0"
description = "A PyTorch-based library for SLAM"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Houssem Boulahbal", email = "houssem.boulahbal@gmail.com"}
]
maintainers = [
  {name = "Houssem Boulahbal", email = "houssem.boulahbal@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
license = {text = "MIT license"}
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]
bugs = "https://github.com/Houssem-25/torchslam/issues"
changelog = "https://github.com/Houssem-25/torchslam/blob/master/changelog.md"
homepage = "https://github.com/Houssem-25/torchslam"

[tool.setuptools]
packages = ["torchslam"]

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
